k8s/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: cybermaster-backend
  name: cybermaster-backend
spec:
  ports:
  - name: 8000-8000
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: cybermaster-backend
  type: ClusterIP
status:
  loadBalancer: {}
